# mlir_tutorial

./: .gitignore  CMakeLists.txt  CMakePresets.json  lit.cfg
.github/workflow/: build_and_test.yml
.github/workflows/: build_and_test.yml
lib/Conversion/PolyToStandard/: CMakeLists.txt  PolyToStandard.cpp  PolyToStandard.h  PolyToStandard.td
lib/Dialect/Poly/: CMakeLists.txt  PolyDialect.cpp  PolyDialect.h  PolyDialect.td  PolyOps.cpp  PolyOps.h  PolyOps.td  PolyPatterns.td  PolyTraits.h  PolyTypes.h  PolyTypes.td
lib/Transform/Affine/: AffineFullUnroll.cpp  AffineFullUnroll.h  AffineFullUnrollPatternRewrite.cpp  AffineFullUnrollPatternRewrite.h  CMakeLists.txt  Passes.h
lib/Transform/Arith/: CMakeLists.txt  MulToAdd.cpp  MulToAdd.h  MulToAdd.pdll  MulToAddPdll.cpp  MulToAddPdll.h  Passes.h  Passes.td
tests/: affine_loop_unroll.mlir  code_motion.mlir  control_flow_sink.mlir  cse.mlir  ctlz_runner.mlir  mul_to_add_pdll.mlir  poly_canonicalize.mlir  poly_syntax.mlir  poly_to_llvm.mlir  poly_to_llvm_main.c  poly_to_standard.mlir  poly_verifier.mlir
tools/: CMakeLists.txt  tutorial-opt.cpp
